--- a/teste02/Views/Cao/Index.cshtml
+++ b/teste02/Views/Cao/Index.cshtml
@@ -1,15 +1,16 @@
 ﻿@model IEnumerable<teste02.Models.CaoModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cão";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Lista de Cães</h1>
+<h4>Cadastrar Cão</h4>
 
 <p>
-    <a asp-action="Create">Cadastrar novo cão</a>
+    <a asp-action="Create">Adicionando Novo Cão</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
