--- a/teste02/Views/Cao/Create.cshtml
+++ b/teste02/Views/Cao/Create.cshtml
@@ -1,17 +1,19 @@
 ﻿@model teste02.Models.CaoModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastro do cão";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cadastrar</h1>
+<h4>
+    Cadastrar Cão
+</h4>
 
-<h4>Cão</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            @Html.HiddenFor(p => p.DonoId)
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -24,7 +26,7 @@
                 <span asp-validation-for="Raca" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
