--- a/teste02/Views/Cao/Details.cshtml
+++ b/teste02/Views/Cao/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model teste02.Models.CaoModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
