--- a/teste02/Views/Cao/Edit.cshtml
+++ b/teste02/Views/Cao/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model teste02.Models.CaoModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,11 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Edit" asp-controller="Cao" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" disabled="disabled" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            @Html.HiddenFor(p => p.Id)
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
