--- a/teste02/Views/Dono/Edit.cshtml
+++ b/teste02/Views/Dono/Edit.cshtml
@@ -5,26 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Editar</h1>
+<h4>Editar Dono</h4>
 
-<h4>Dono</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" disabled="disabled" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            @Html.HiddenFor(p => p.Id)
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Atualizar" class="btn btn-primary" />
             </div>
         </form>
     </div>
