--- a/teste02/Views/Cao/Index.cshtml
+++ b/teste02/Views/Cao/Index.cshtml
@@ -40,8 +40,8 @@
                     @Html.DisplayFor(modelItem => item.Raca)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
             </tr>
