--- a/teste02/Views/Home/Index.cshtml
+++ b/teste02/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4"></h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="text-center">
+
+       <h5>PetShop</h5>
+
+    </div>
+    
 </div>
